--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="Media/fav.png">
     <title>Portifólio | Bruno Vieira</title>
 </head>
 <body>
-    
+    <header>
+        <p> escrevendo para fazer commit </p>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+
+    </footer>
 </body>
 </html>
