--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html Pt-BR>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="Media/fav.png">
-    <title>Portifólio | Bruno Vieira</title>
-</head>
-<body>
-    <header>
-        <p> escrevendo para fazer commit </p>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="Media/fav.png">
+        <link rel="stylesheet" href="styles.css">
+        <title>Portifólio | Bruno Vieira</title>
+    </head>
+    <body>
+        <header>
+            <div class="cabecalho">
+                <!-- <img src="Media/logobanner1.png" alt="Logo Bruno Vieira"> -->
+            </div> 
+        </header>
+        <main>
+            <h1> texto</h1>
+        </main>
+        <footer>
 
-    </header>
-    <main>
 
-    </main>
-    <footer>
-
-
-    </footer>
-</body>
+        </footer>
+    </body>
 </html>
