--- a/Index.html
+++ b/Index.html
@@ -10,15 +10,15 @@
     </head>
     <body>
         <header>
-            <div class="cabecalho">
-                <!-- <img src="Media/logobanner1.png" alt="Logo Bruno Vieira"> -->
-            </div> 
+            
         </header>
         <main>
             <h1> texto</h1>
+            <button type="button">Clique Aqui</button>
+            <a href="http://127.0.0.1:5500/Index.html" class="meu-link">Clique aqui para visitar o exemplo</a>
         </main>
         <footer>
-
+            <p> Desenvolvido por Bruno Vieira</p>
 
         </footer>
     </body>
