--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,16 @@
     </head>
     <body>
         <header>
+            <nav> 
+                <div class="nav-config">
+                    <img id="logo" src="Media/logobanner1.png" alt="Logo Bruno Vieira">
+                    <ul>
+                        <li><a href="About.html">Sobre mim</a> </li>
+                        <li><a href="#">Meus Projetos</a> </li>
+                    </ul>
+                </div>
+            </nav>
+            
             
         </header>
         <main>
